--- a/style/index.css
+++ b/style/index.css
@@ -1,5 +1,5 @@
 /* body {
-  background-color: rgb(212, 148, 114);
+  background: #e7fff3 url(picture/bg.gif) center top repeat-y;
 } */
 
 .rounded-img {
