--- a/style/places.css
+++ b/style/places.css
@@ -12,7 +12,7 @@
   margin: auto;
 }
 
-.footer {
+footer {
   background: rgb(153, 56, 38);
   padding: 20px;
   /* justify-content: space-between; */
